<resources>
    <string name="app_name">Holti Health</string>
    <string name="title_home">Home</string>
    <string name="title_history">Riwayat</string>
    <string name="title_article">Artikel</string>
    <string name="title_profile">Profil</string>
    <string name="masuk">Masuk</string>
    <string name="title_welcome_page">Selamat datang di Holti Health!</string>
    <string name="message_welcome_page">Temukan solusi terbaik untuk melindungi tanaman cabai Anda dari penyakit. Dengan Holti Health, panen sehat bukan lagi sekadar harapan!</string>
    <string name="title_welcome_page1">Selamat Datang, Petani Cerdas!</string>
    <string name="message_welcome_page1">Holti Health hadir untuk membantu Anda mengenali dan mengatasi penyakit pada tanaman cabai. Tingkatkan hasil panen Anda dengan teknologi pintar!</string>
    <string name="title_welcome_page2">Mari Mulai Bersama Holti Health!</string>
    <string name="message_welcome_page2">Tekan tombol di bawah untuk memulai analisis tanaman cabai Anda. Bersama Holti Health, langkah kecil Anda hari ini membawa panen besar esok hari!</string>
    <string name="choose_again">Pilih Ulang</string>
    <string name="photos">Gallery</string>
    <string name="retake">Ambil Ulang</string>
    <string name="image_scan">image scan</string>
    <string name="text_result">text_result</string>
    <string name="disease_name">disease name</string>
    <string name="scan_date">scan date</string>

    <string name="title">Title</string>
    <string name="description">description</string>
    <string name="register">Register</string>
    <string name="recent_diagnoze">Riwayat Diagnosa</string>
    <string name="belum_ada_history">Belum Ada History</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="nama">Nama</string>
    <string name="username">username</string>
    <string name="kenali_penyakit_cabai_dengan_ai">Kenali penyakit cabai dengan AI</string>
    <string name="mulai_kenali">Mari mulai kenali penyakit yang menyerang cabai anda.</string>
    <string name="scan_now">Scan Sekarang</string>
    <string name="login">Login</string>
    <string name="invalid_email_error">Format email tidak sesuai</string>
    <string name="password_error">Password tidak boleh kurang dari 8 karakter</string>
    <string name="throw_application">Application is not an instance of MyApplication</string>
    <string name="story">Riwayat</string>
    <string name="delete_alert">Hapus Riwayat</string>
    <string name="are_you_sure_delete">Apakah Anda yakin ingin menghapus riwayat ini?</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="whats_up">Apa Kabar!</string>
    <string name="name_not_filled">Nama belum diset</string>
    <string name="user_not_found">Pengguna tidak ditemukan</string>
    <string name="error_email_empty">Email tidak boleh kosong</string>
    <string name="invalid_email">Email tidak valid</string>
    <string name="error_password_empty">Password tidak boleh kosong</string>
    <string name="login_succes">Login berhasil!</string>
    <string name="account_not_verified">Akun belum diverifikasi. Periksa email Anda.</string>
    <string name="login_failed">Login gagal: %1$s</string>
    <string name="error_name_empty">Nama tidak boleh kosong</string>
    <string name="error_min_password">Password minimal 8 karakter</string>
    <string name="succes_register">Registrasi berhasil! Periksa email untuk verifikasi.</string>
    <string name="error_send_email">Gagal mengirim email verifikasi: %1$s</string>
    <string name="error_profie">Gagal memperbarui profil: %1$s</string>
    <string name="register_fail">Registrasi gagal: %1$s</string>
    <string name="result">Hasil</string>
    <string name="symptoms_not_find">Data gejala tidak ditemukan.</string>
    <string name="control_not_find">Data pengendalian tidak ditemukan.</string>
    <string name="image_not_find">Gambar tidak ditemukan.</string>
    <string name="analyze_image">Sedang menganalisis gambar…</string>
    <string name="erro_analyze_image">Gagal menganalisis gambar: %1$s</string>
    <string name="permission_granted">Permintaan izin disetujui</string>
    <string name="permission_not_granted">Permintaan izin ditolak</string>
    <string name="profil">Profil</string>
    <string name="name_not_set">Nama belum diset</string>
    <string name="logout_succes">Berhasil logout</string>
    <string name="error_capturing">Error capturing image: %1$s</string>
    <string name="text_symptom">text symptom</string>
    <string name="title_symptom">Gejala Serangan</string>
    <string name="title_control">Cara Pengendalain</string>
    <string name="text_control">text control</string>
    <string name="not_have_account">Belum Punya Akun?</string>
    <string name="not_detect_chili">Data Tanaman Cabe Tidak Terdeteksi</string>
    <string name="reupload_image">Silakan unggah gambar baru untuk analisis ulang.</string>
    <string name="reupload">Unggah Lagi</string>
    <string name="no_connection">Tidak ada Internet</string>
    <string name="show_problem">Oops! Ada masalah</string>
    <string name="no_connection_and_try_again">Periksa koneksi internet Anda dan coba lagi.</string>
    <string name="ok">OK</string>
    <string name="nice_example">Berikut adalah contoh yang buruk:</string>
    <string name="blur">Blur</string>
    <string name="got_it">Got it</string>
    <string name="no_history">Belum ada history</string>
    <string name="logout">Logout</string>
    <string name="loading">Loading…</string>
    <string name="to_far">Terlalu Jauh</string>
    <string name="logout_alert">Logout</string>
    <string name="are_you_sure_logout">Apakah anda yakin untuk logout?</string>
    <string name="snap_tips">Snap Tips</string>
    <string name="camera">Camera</string>
    <string name="error_unable_to_load_image">Error: Unable to load image.</string>
    <string name="error_unable_to_process_image">Error: Unable to process image.</string>
    <string name="back">back</string>
    <string name="take_image">ambil_gambar</string>
    <string name="tips">bantuan</string>
    <string name="result_image">gambar hasil</string>
    <string name="logo_holti_health">logo holti health</string>
    <string name="scan_chili">scan_cabe</string>
    <string name="image_preview">preview gambar</string>
    <string name="first_logo">logo menu pertama</string>
    <string name="second_menu_logo">logo menu kedua</string>
    <string name="thrid_menu_logo">logo menu ketiga</string>
    <string name="good_take_picture">contoh ambil gambar yang baik</string>
    <string name="bad_take_picture1">contoh pengambilan gambar yang buruk 1</string>
    <string name="bad_take_picture2">contoh pengambilan gambar yang buruk 2</string>
    <string name="image_articel">gambar artikel</string>
    <string name="delete_history">hapus history</string>
    <string name="history_image">gambar history</string>


</resources>