<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/preview_image_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp"
        android:contentDescription="@string/image_preview"/>

    <View
        android:id="@+id/bottom_background"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_retake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_again"
        app:strokeColor="?attr/colorPrimary"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_analyze_image"
        style="?attr/materialButtonOutlinedStyle"/>

    <ImageButton
        android:id="@+id/button_analyze_image"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/green"
        android:contentDescription="@string/analyze_image"/>

    <ImageButton
        android:id="@+id/button_snap_tips"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_tips"
        android:scaleType="centerCrop"
        android:layout_marginBottom="43dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_analyze_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/green"
        android:contentDescription="@string/snap_tips"/>

</androidx.constraintlayout.widget.ConstraintLayout>
