<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.camera.view.PreviewView
        android:id="@+id/texture_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-6dp" />

    <ImageButton
        android:id="@+id/close_camera"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        android:background="@color/transparent"
        app:tint="?attr/colorOnSurface"
        android:contentDescription="@string/back"/>

    <View
        android:id="@+id/bottom_background"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_open_gallery"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/photos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_take_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="?attr/colorPrimary" />

    <ImageButton
        android:id="@+id/button_take_picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="15dp"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_take_image"
        app:layout_constraintBottom_toBottomOf="@id/bottom_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/green"
        android:contentDescription="@string/take_image"/>

    <ImageButton
        android:id="@+id/button_snap_tips"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="43dp"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_tips"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_take_picture"
        app:tint="@color/green"
        android:contentDescription="@string/tips"/>

</androidx.constraintlayout.widget.ConstraintLayout>
