<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="4dp"
    android:layout_marginBottom="10dp"
    app:cardElevation="0.5dp"
    style="?attr/materialCardViewOutlinedStyle"
    app:strokeColor="@color/card_stroke_color"
    app:strokeWidth="0.5dp">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivHistory"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/history_image"/>

        <TextView
            android:id="@+id/diseaseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintStart_toEndOf="@+id/ivHistory"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/scanTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_date"
            android:textSize="14sp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivHistory" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>